add post function in home.html; modify md; add meta for htmls

--- a/css/home.css
+++ b/css/home.css
@@ -44,3 +44,11 @@ thead {
     color: #00AA00;
     font-weight: bold;
 }
+
+.form-group{
+    font-size: large;
+}
+
+.form-control{
+    font-size: large;
+}
