--- a/css/home.css
+++ b/css/home.css
@@ -52,3 +52,14 @@ thead {
 .form-control{
     font-size: large;
 }
+
+.insert-img {
+    height: 250px;
+    margin-right: 10px;
+}
+
+.insert-file {
+    height: 250px;
+    margin-right: 10px;
+    width: 100%;
+}
