slightly modify thread.html & home.css

--- a/css/home.css
+++ b/css/home.css
@@ -38,6 +38,12 @@ thead {
     color: grey;
 }
 
+.floor-text {
+    /* font-size: small; */
+    font-weight: normal;
+    color: black;
+}
+
 /* a:hover {
     color: white;
 }
